Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-1631

"Add New C++ Class" in a project subfolder does not fill completely "Path" in Class Wizard Dialog

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • Not Evaluated
    • Qt Creator 2.0.1
    • Qt Creator 1.3.85 (2.0.0-rc1)
    • None
    • Windows XP SP3
    • 0862afe3574aeccb48853d4e7b3b6b7eff96d7bf

    Description

      This used to work correctly in Creator 1.3.1. Have a lib project with subfolders. NOT qmake TEMPLATE = subdirs, simply TEMPLATE = lib but SOURCES = ...somecomponent/mysource.cpp. The subfolders are shown in a project tree view. Upon right-clicking on a "somecomponent" subfolder and selecting Add New... C+ Class, the following "C++ Class Wizard Dialog" USED TO CORRECTLY fill the full path of right-clicked folder "somecomponent" in the "Path" text field. Since Creator 2.0 alpha, there is always only the root folder of the whole project.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            con Eike Ziller
            vtmarvin Pavel Zdenek
            Votes:
            0 Vote for this issue
            Watchers:
            0 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes