Fixes wrong internal folder path for first level project subfolder

Task-number: QTCREATORBUG-1631