src/plugins/qt4projectmanager/qt4nodes.cpp
@@ -308,7 +308,7 @@ struct InternalNode
 #endif
             QStringListIterator it(parts);
             InternalNode *currentNode = this;
-            QString path = (isRelative ? projectDir : "");
+            QString path = (isRelative ? projectDirWithSeparator : "");
             while (it.hasNext()) {
                 const QString &key = it.next();
                 if (it.hasNext()) { // key is directory
